syntax = "proto3";

package calculator;

option java_package = "com.proto.streaming";
option java_multiple_files = true;


message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double root = 1;
}

service CalculatorService {

  //error handling
  //this RPC will throw an exception if the sent number is negative
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse ) {};
}
